--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,6 +7,7 @@
     <meta name="author" content="">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
 
     <title>My Institute</title>
@@ -68,8 +69,28 @@
   </header>
   <!-- ***** Header Area End ***** -->
 
+  <a href="#" style="position: fixed; margin-top: 200px; z-index: 1000;" id="enquire">
+    <div class="alert alert-primary" role="alert" id="alertDiv">
+      Enquire Now! <button type="button" class="btn-close" aria-label="Close" onclick="closeAlert()"></button>
+    </div>
+  </a>
+  
+
   <section>
     <%- include('./components/header.ejs') %>
+    <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img src="/assets/images/blog-post-04.jpg" style="height: 200px;" class="d-block w-100" alt="...">
+        </div>
+        <div class="carousel-item">
+          <img src="/assets/images/blog-post-04.jpg" style="height: 200px;" class="d-block w-100" alt="...">
+        </div>
+        <div class="carousel-item">
+          <img src="/assets/images/blog-post-04.jpg" style="height: 200px;" class="d-block w-100" alt="...">
+        </div>
+      </div>
+    </div>
   </section>
 
   <section>
@@ -98,12 +119,24 @@
 
 
   <!-- Scripts -->
-  <script src="vendor/jquery/jquery.min.js"></script>
-  <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <script src="/vendor/jquery/jquery.min.js"></script>
+  <script src="/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
   <script src="/assets/js/owl-carousel.js"></script>
   <script src="/assets/js/animation.js"></script>
   <script src="/assets/js/imagesloaded.js"></script>
   <script src="/assets/js/custom.js"></script>
+
+  <script>
+    function closeAlert() {
+      // Hide the alert div
+      document.getElementById('alertDiv').style.display = "none";
+      
+      // Prevent default anchor link behavior (scrolling to top)
+      event.preventDefault();
+    }
+  </script>
 
 </body>
 </html>
