--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -28,7 +28,7 @@
                         <i class="fas fa-tachometer-alt"></i>
                         <span class="sidebar-text">Dashboard</span>
                     </a>
-                    <a href="#" class="flex items-center space-x-2 p-2 hover:bg-gray-700 rounded">
+                    <a href="/students" class="flex items-center space-x-2 p-2 hover:bg-gray-700 rounded">
                         <i class="fas fa-user-graduate"></i>
                         <span class="sidebar-text">Students</span>
                     </a>
@@ -36,7 +36,7 @@
                         <i class="fas fa-chalkboard-teacher"></i>
                         <span class="sidebar-text">Teachers</span>
                     </a>
-                    <a href="#" class="flex items-center space-x-2 p-2 hover:bg-gray-700 rounded">
+                    <a href="/show/all/courses" class="flex items-center space-x-2 p-2 hover:bg-gray-700 rounded">
                         <i class="fas fa-book"></i>
                         <span class="sidebar-text">Courses</span>
                     </a>
